minimal code cleanup